# parne-portfolio

./: .gitignore  CNAME  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
src/: app.rs  main.rs
src/commands/: easter_eggs.rs  filesystem.rs  mod.rs  registry.rs  theme.rs
src/commands/games/: mod.rs  tictactoe.rs  typing_test.rs
src/components/: matrix_rain.rs  mobile_toolbar.rs  mod.rs  typewriter.rs  welcome.rs
src/filesystem/: builder.rs  content.rs  mod.rs  model.rs
src/parser/: tokenizer.rs
src/state/: theme.rs
styles/: main.css
