[package]
name = "terminal_portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.15", features = ["csr"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "KeyboardEvent",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
